syntax = "proto3";

option csharp_namespace = "HospitalManagementSystem.API.Grpc";

package doctor;

import "google/protobuf/empty.proto";

service DoctorGrpcService {
  rpc CreateDoctor (DoctorRequest) returns (DoctorResponse);
  rpc GetDoctor (GetDoctorRequest) returns (DoctorResponse);
  rpc UpdateDoctor (UpdateDoctorRequest) returns (DoctorResponse);
  rpc DeleteDoctor (GetDoctorRequest) returns (google.protobuf.Empty);
  rpc ListDoctors (google.protobuf.Empty) returns (DoctorList);
}

message DoctorRequest {
  string name = 1;
  string specialty = 2;
}

message UpdateDoctorRequest {
  int32 id = 1;
  string name = 2;
  string specialty = 3;
}

message GetDoctorRequest {
  int32 id = 1;
}

message DoctorResponse {
  int32 id = 1;
  string name = 2;
  string specialty = 3;
}

message DoctorList {
  repeated DoctorResponse doctors = 1;
}
